--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306
+spring.datasource.url=jdbc:mysql://localhost:3306/blog_db
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.jpa.hibernate.ddl-auto=
+# spring.jpa.show-sql=true
